// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Task Archived 1`] = `
<div
  class="list-item TASK_ARCHIVED"
>
  <label
    class="checkbox"
  >
    <input
      disabled=""
      name="checked"
      type="checkbox"
    />
    <span
      aria-label="archiveTask-1"
      class="checkbox-custom"
    />
  </label>
  <div
    class="title"
  >
    <input
      placeholder="Input title"
      readonly=""
      type="text"
    />
  </div>
  <div
    class="actions"
  >
    <!--v-if-->
  </div>
</div>
`;

exports[`Storyshots Task Default 1`] = `
<div
  class="list-item TASK_ARCHIVED"
>
  <label
    class="checkbox"
  >
    <input
      disabled=""
      name="checked"
      type="checkbox"
    />
    <span
      aria-label="archiveTask-1"
      class="checkbox-custom"
    />
  </label>
  <div
    class="title"
  >
    <input
      placeholder="Input title"
      readonly=""
      type="text"
    />
  </div>
  <div
    class="actions"
  >
    <!--v-if-->
  </div>
</div>
`;

exports[`Storyshots Task Pinned 1`] = `
<div
  class="list-item TASK_INBOX"
>
  <label
    class="checkbox"
  >
    <input
      disabled=""
      name="checked"
      type="checkbox"
    />
    <span
      aria-label="archiveTask-1"
      class="checkbox-custom"
    />
  </label>
  <div
    class="title"
  >
    <input
      placeholder="Input title"
      readonly=""
      type="text"
    />
  </div>
  <div
    class="actions"
  >
    <a>
      <span
        aria-label="pinTask-1"
        class="icon-star"
      />
    </a>
  </div>
</div>
`;

exports[`Storyshots TaskList Default 1`] = `
<div
  class=""
>
  <label
    class="checkbox"
  >
    <input
      disabled=""
      name="checked"
      type="checkbox"
    />
    <span
      aria-label="archiveTask-undefined"
      class="checkbox-custom"
    />
  </label>
  <div
    class="title"
  >
    <input
      placeholder="Input title"
      readonly=""
      type="text"
    />
  </div>
  <div
    class="actions"
  >
    <a>
      <span
        aria-label="pinTask-undefined"
        class="icon-star"
      />
    </a>
  </div>
</div>
`;

exports[`Storyshots TaskList Empty 1`] = `
<div
  style="margin: 3em;"
>
  <div
    class="list-items"
  >
    <div
      class="wrapper-message"
    >
      <span
        class="icon-check"
      />
      <div
        class="title-message"
      >
        You have no tasks
      </div>
      <div
        class="subtitle-message"
      >
        Sit back and relax
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TaskList Loading 1`] = `
<div
  style="margin: 3em;"
>
  <div
    class="list-items"
  >
    <div
      class="wrapper-message"
    >
      <span
        class="icon-check"
      />
      <div
        class="title-message"
      >
        You have no tasks
      </div>
      <div
        class="subtitle-message"
      >
        Sit back and relax
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TaskList With Pinned Tasks 1`] = `
<div
  style="margin: 3em;"
>
  <div
    class="list-items"
  >
    
    <div
      class="loading-item"
    >
      <span
        class="glow-checkbox"
      />
      <span
        class="glow-text"
      >
        <span>
          Loading
        </span>
         
        <span>
          cool
        </span>
         
        <span>
          state
        </span>
      </span>
    </div>
    <div
      class="loading-item"
    >
      <span
        class="glow-checkbox"
      />
      <span
        class="glow-text"
      >
        <span>
          Loading
        </span>
         
        <span>
          cool
        </span>
         
        <span>
          state
        </span>
      </span>
    </div>
    <div
      class="loading-item"
    >
      <span
        class="glow-checkbox"
      />
      <span
        class="glow-text"
      >
        <span>
          Loading
        </span>
         
        <span>
          cool
        </span>
         
        <span>
          state
        </span>
      </span>
    </div>
    <div
      class="loading-item"
    >
      <span
        class="glow-checkbox"
      />
      <span
        class="glow-text"
      >
        <span>
          Loading
        </span>
         
        <span>
          cool
        </span>
         
        <span>
          state
        </span>
      </span>
    </div>
    <div
      class="loading-item"
    >
      <span
        class="glow-checkbox"
      />
      <span
        class="glow-text"
      >
        <span>
          Loading
        </span>
         
        <span>
          cool
        </span>
         
        <span>
          state
        </span>
      </span>
    </div>
    <div
      class="loading-item"
    >
      <span
        class="glow-checkbox"
      />
      <span
        class="glow-text"
      >
        <span>
          Loading
        </span>
         
        <span>
          cool
        </span>
         
        <span>
          state
        </span>
      </span>
    </div>
    
  </div>
</div>
`;
